# viow

./: Cargo.toml  README.md
.github/workflows/: rust.yml
docs/: usage.md
examples/: core.lua  core.vcd  filter_test.lua  ignore.lua  no_filter.lua  pipeline.lua  script_test.lua  verilator.vcd
examples/more/: 2Mx2k.hello  2Mx2k.lua
src/: config.rs  data.rs  error.rs  formatting.rs  lib.rs  load.rs  main.rs  pipeline.rs  scripts.rs  viewer.rs  wave.rs
src/data/: simtime.rs
src/data/transforms/: identity.rs
src/load/: empty.rs  plugin.rs  test.rs  vcd.rs
src/pipeline/: filter.rs
src/pipeline/filter/: analog.rs  grep.rs  ignore.rs  remove_comments.rs  replace_prefix.rs  signal_list.rs
src/scripts/: lua.rs
src/scripts/lua/: api.rs
src/wave/: cache.rs  pipeline_cid.rs
support/scripts/: viow.lua
tests/: cmd_test.rs  interactive.rs  load_test.rs
