[package]
name = "text-wave"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossterm = { version = "0.21", features = [ "serde" ] }
crossterm = "0.21"
#serde = { version = "1.0", features = [ "derive" ] }
#serde_json = "1.0"
tui = { version = "0.16", default-features = false, features = [ "crossterm" ] }
ndarray = "0.15"
rug = "1.13"
vcd = "0.6"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "3.0.0-beta.5", features = [ "derive" ] }
mlua = { version = "0.6", features = [ "lua54" ] }
regex = "1"
